--- a/templates/fruits.html.twig
+++ b/templates/fruits.html.twig
@@ -105,7 +105,7 @@
                     <td>{{single.fat}}</td>
                     <td>{{single.calories}}</td>
                     <td>{{single.sugar}}</td>
-                    <td><a href="{{ path('fav_fruit_add', {fruit_id: single.id}) }}"><button type="button" class="btn btn-primary">Fruits List</button></a></td>
+                    <td><a href="{{ path('fav_fruit_add', {fruit_id: single.id}) }}"><button type="button" class="btn btn-primary">Add to Favourite</button></a></td>
                 </tr>
                 {% set index = index + 1 %}
             {% endfor %}
